# logdetective-packit

./: .pre-commit-config.yaml  Containerfile  README.md  pyproject.toml
.github/workflows/: build.yml  docker-publish.yml  image_publish.yml  pytest.yml
schema/: README.md  pyproject.toml
schema/src/logdetective_packit_message/: __init__.py  models.py
server/: conf.toml  gunicorn.config.py
src/logdetective_packit/: main.py  models.py
tests/: test_main.py  test_models.py  test_server.py  utils.py
