[project]
name = "logdetective-packit"
version = "0.2.0"
description = "Server providing interface between packit and Log Detective"
authors = [
    { name = "Jiri Podivin", email = "jpodivin@redhat.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.2",
    "fedora-messaging>=3.8.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.12.3",
    "requests>=2.32.5",
    "ruff>=0.14.2",
    "uvicorn>=0.38.0",
]

[project.scripts]
example-pkg = "logdetective_packit:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
]
